<resources>
    <string name="app_name">Event Log</string>
    <string name="emptyString"></string>
    <string name="welcomeString">Welcome to Event Log</string>
    <string name="login">Log in</string>
    <string name="register">Sign up</string>
    <string name="loginScreenMessage">Please enter your Email and Password to Login</string>
    <string name="emailPlaceholder">Enter your Email</string>
    <string name="passwordPlaceholder">Enter your Password</string>
    <string name="firstNamePlaceholder">First Name</string>
    <string name="lastNamePlaceholder">Last Name</string>
    <string name="forgetPassword"><u>Forgot your password?</u></string>
    <string name="resetPassword">Reset Your Password</string>
    <string name="sendPasswordLink">Send Link</string>
    <string name="logout">Logout</string>

    <string name="tab_events">Events</string>
    <string name="tab_addevent">Add</string>
    <string name="tab_myevents">My Events</string>
    <string name="tab_profile">Profile</string>

    <string name="editEventHeader">Edit Event</string>

    <string name="uploadBtn">Upload Image</string>
    <string name="changeBtn">Change Image</string>
    <string name="removeBtn">Remove Image</string>

    <string name="addEvent">Add Event</string>

    <string name="fontFamily">sans-serif-light</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>