<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp">

    ِ<TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="80dp"
        android:textColor="@color/whiteColor"
    />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/backgroundColor"
        android:padding="10dp"
        android:textColor="@color/whiteColor"
        android:textSize="16dp"
        />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/backgroundColor"
        android:textColor="@color/whiteColor"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        />



</LinearLayout>