<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="60dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="36dp"
        android:textColor="@color/whiteColor"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        android:background="@color/whiteColor">
        
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailPlaceholder"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordPlaceholder"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:layout_gravity="end"
            android:textSize="12dp"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/loginScreenBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/backgroundColor"
            android:textColor="@color/whiteColor"
            android:textSize="16dp"
            android:layout_marginTop="20dp"
            />

        <ProgressBar
            android:id="@+id/loginLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            />
        
    </LinearLayout>


</LinearLayout>