<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signupToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/emptyString"
        app:navigationIcon="@drawable/left_arrow"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/spacing_10"
        android:layout_below="@+id/signupToolbar">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontFamily"
            android:text="Join Event Log"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/heading_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontFamily"
            android:text="Please fill out below details to be the part of great event log application"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/info_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview6">

            <EditText
                android:id="@+id/signupFirstName"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/user_icon"
                android:drawablePadding="@dimen/spacing_10"
                android:fontFamily="@string/fontFamily"
                android:hint="@string/firstNamePlaceholder"
                android:inputType="text" />

            <EditText
                android:id="@+id/signupLastName"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/user_icon"
                android:drawablePadding="@dimen/spacing_10"
                android:fontFamily="@string/fontFamily"
                android:hint="@string/lastNamePlaceholder"
                android:inputType="text" />

        </LinearLayout>

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="@dimen/spacing_10"
            android:fontFamily="@string/fontFamily"
            android:hint="@string/emailPlaceholder"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="@dimen/spacing_10"
            android:fontFamily="@string/fontFamily"
            android:hint="@string/passwordPlaceholder"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupEmail" />

        <Button
            android:id="@+id/signupScreenBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:fontFamily="@string/fontFamily"
            android:text="@string/register"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/buttonFontSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

        <ProgressBar
            android:id="@+id/signupLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/backgroundColor"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupScreenBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>