<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/resetPasswordToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/emptyString"
        app:navigationIcon="@drawable/left_arrow"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/spacing_10"
        android:layout_below="@+id/resetPasswordToolbar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontFamily"
            android:text="@string/resetPassword"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/heading_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontFamily"
            android:text="Please enter yuor registered email here. A password reset Email will be sent to you."
            android:textColor="@color/blackColor"
            android:textSize="@dimen/info_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/forgetPasswordEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="@dimen/spacing_10"
            android:fontFamily="@string/fontFamily"
            android:hint="@string/emailPlaceholder"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/forgetPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:fontFamily="@string/fontFamily"
            android:text="@string/sendPasswordLink"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/buttonFontSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPasswordEmail" />

        <ProgressBar
            android:id="@+id/forgetPasswordLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/backgroundColor"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPasswordBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>