<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome"
    android:padding="@dimen/spacing_10"
    android:orientation="vertical"
    android:background="@color/whiteColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontFamily"
            android:text="Welcome To,"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/heading_28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontFamily"
            android:text="@string/app_name"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/heading_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <ImageView
            android:id="@+id/welcome_illustration"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/spacing_20"
            android:src="@drawable/welcome_illustration"
            app:layout_constraintDimensionRatio="1:1"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:fontFamily="@string/fontFamily"
            android:padding="@dimen/spacing_10"
            android:text="@string/login"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/buttonFontSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_illustration" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:fontFamily="@string/fontFamily"
            android:padding="@dimen/spacing_10"
            android:text="@string/register"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/buttonFontSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>